Perkin-UAT/force-app/main/default/objects/SMAX_PS_ProductClassification__c/SMAX_PS_ProductClassification__c.object-meta.xml
<CustomObject>
    <label>Product Classification</label>
    <nameField>
        <displayFormat>PCLS-{00000000}</displayFormat>
        <label>Product Classification Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Classifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>