Perkin-UAT/force-app/main/default/objects/SMAX_PS_ProductClassification__c/fields/SMAX_PS_ExternalID__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_ExternalID__c</fullName>
    <externalId>true</externalId>
    <label>External ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>