Perkin-UAT/force-app/main/default/objects/SMAX_PS_ProductClassification__c/fields/SMAX_PS_Product__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Product Classifications</relationshipLabel>
    <relationshipName>Product_Classifications</relationshipName>
    <type>Lookup</type>
</CustomField>